# VDB

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  dependencies.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: Breakpoint.cpp  Breakpoint.hpp  BreakpointTable.cpp  BreakpointTable.hpp  CUHeader.cpp  CUHeader.hpp  DIECompileUnit.cpp  DIECompileUnit.hpp  DIESubprogram.cpp  DIESubprogram.hpp  DebugAddressRanges.hpp  DebugInfo.hpp  DebuggingInformationEntry.cpp  DebuggingInformationEntry.hpp  DwarfCpp.cpp  DwarfCpp.hpp  DwarfDebug.cpp  DwarfDebug.hpp  Makefile  main.cpp  vdb
src/core/: Backtracer.hpp  Breakpoint.cpp  Breakpoint.hpp  BreakpointTable.cpp  BreakpointTable.hpp  CMakeLists.txt  CUHeader.cpp  CUHeader.hpp  DIEBaseType.cpp  DIEBaseType.hpp  DIECompileUnit.cpp  DIECompileUnit.hpp  DIEFormalParameter.cpp  DIEFormalParameter.hpp  DIELexicalBlock.hpp  DIEPointerType.hpp  DIESubprogram.cpp  DIESubprogram.hpp  DIEVariable.hpp  DebugAddressRanges.cpp  DebugAddressRanges.hpp  DebugEngine.cpp  DebugEngine.hpp  DebugInfo.cpp  DebugInfo.hpp  DebugLine.cpp  DebugLine.hpp  DebuggingInformationEntry.cpp  DebuggingInformationEntry.hpp  DwarfDebug.cpp  DwarfDebug.hpp  DwarfExprInterpreter.hpp  ELFFile.cpp  ELFFile.hpp  Makefile  Process.cpp  Process.hpp  ProcessDebugger.cpp  ProcessDebugger.hpp  ProcessMemoryMappings.cpp  (+15 more)
src/core/dwarf/: Attribute.cpp  Attribute.hpp  CUHeader.hpp  DIE.cpp  DIE.hpp  DIEArrayType.cpp  DIEArrayType.hpp  DIEBaseType.cpp  DIEBaseType.hpp  DIEClassType.cpp  DIEClassType.hpp  DIECompileUnit.cpp  DIEConstType.cpp  DIEConstType.hpp  DIELexicalBlock.cpp  DIEMemberType.cpp  DIEMemberType.hpp  DIEPointerType.cpp  DIEPointerType.hpp  DIEReferenceType.cpp  DIEReferenceType.hpp  DIEStructureType.cpp  DIEStructureType.hpp  DIESubrangeType.cpp  DIESubrangeType.hpp  DIEVariable.cpp  DIEVariable.hpp  DebugAddressRanges.cpp  DebugAddressRanges.hpp  DebugInfo.cpp  DebugInfo.hpp  DebugLine.cpp  DebugLine.hpp  DebuggingInformationEntry.cpp  DwarfDebug.cpp  DwarfDebug.hpp  DwarfExprInterpreter.cpp  DwarfExprInterpreter.hpp  DwarfReader.cpp  DwarfReader.hpp  (+2 more)
src/ui/: CMakeLists.txt  Makefile  VDB.pro  codeeditor.cpp  codeeditor.h  filetabs.cpp  filetabs.h  filetree.cpp  filetree.h  highlighter.cpp  highlighter.h  linenumberarea.cpp  linenumberarea.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stacktracelist.cpp  stacktracelist.h  watchtable.cpp  watchtable.h
tests/: CMakeLists.txt
tests/core/: BreakpointsTest.cpp  CMakeLists.txt  StepIntoTest.cpp  VDBInitTest.cpp  VariablesTest.cpp
tests/data/: CMakeLists.txt  functions.cpp  hello_world.cpp  library.cpp  library.hpp  use_library.cpp  variables.cpp
